classDiagram
  class User {
    +id: bigint
    +full_name: string
    +email: string
    +password_hash: string
    +role: enum
    +phone: string
    +is_active: boolean
  }

  class Organization {
    +id: bigint
    +user_id: bigint
  }

  class Beneficiary {
    +id: bigint
    +user_id: bigint
  }

  class Profile {
    +id: bigint
    +user_id: bigint
  }

  class Need {
    +id: bigint
    +organization_id: bigint?
    +beneficiary_id: bigint?
    +created_by_user_id: bigint
    +title: string
    +category: enum
    +urgency_level: enum
    +amount_target: decimal
    +amount_collected: decimal
    +status: enum
  }

  class NeedUpdate {
    +id: bigint
    +need_id: bigint
    +created_by_user_id: bigint
    +content: text
  }

  class DonationCart {
    +id: bigint
    +donor_user_id: bigint
    +status: enum
  }

  class DonationCartItem {
    +id: bigint
    +cart_id: bigint
    +need_id: bigint
    +amount: decimal
  }

  class DonationOrder {
    +id: bigint
    +donor_user_id: bigint
    +cart_id: bigint
    +order_reference: string
    +total_amount: decimal
    +currency: char(3)
    +status: enum
    +paid_at: datetime?
    +last_webhook_at: datetime?
  }

  class Donation {
    +id: bigint
    +order_id: bigint
    +need_id: bigint
    +donor_user_id: bigint
    +amount: decimal
    +status: enum
  }

  class PaymentTransaction {
    +id: bigint
    +donation_order_id: bigint
    +provider_name: string
    +transaction_id: string?
    +idempotency_key: string?
    +status: enum
    +amount: decimal
    +currency: char(3)
    +incident_flag: boolean
    +last_webhook_at: datetime?
  }

  class PaymentAuditLog {
    +id: bigint
    +payment_transaction_id: bigint
    +donation_order_id: bigint
    +action_type: string
    +trace_id: string
    +hash: string
  }

  class Notification {
    +id: bigint
    +user_id: bigint
    +type: string
    +status: enum
    +title: string
    +body: text
  }

  class CourierProfile {
    +id: bigint
    +user_id: bigint
    +vehicle_type: enum
    +verification_status: enum
    +trust_score: decimal
  }

  class DeliveryRequest {
    +id: bigint
    +need_id: bigint?
    +donation_order_id: bigint?
    +requested_by_user_id: bigint
    +assigned_courier_id: bigint?
    +status: enum
  }

  class DeliveryOffer {
    +id: bigint
    +request_id: bigint
    +courier_user_id: bigint
    +offered_price: decimal
    +status: enum
  }

  class DeliveryMission {
    +id: bigint
    +need_id: bigint
    +donation_order_id: bigint?
    +courier_user_id: bigint?
    +created_by_user_id: bigint?
    +status: enum
  }

  class DeliveryEvent {
    +id: bigint
    +mission_id: bigint
    +actor_user_id: bigint?
    +event_type: enum
  }

  class DeliveryProof {
    +id: bigint
    +mission_id: bigint
    +photo_url: string?
    +gps_lat: float?
    +gps_lng: float?
  }

  class SocialProduct {
    +id: bigint
    +name: string
    +status: enum
  }

  class SocialDonation {
    +id: bigint
    +user_id: bigint
    +amount: decimal
    +status: enum
  }

  class SocialOrder {
    +id: bigint
    +user_id: bigint
    +status: enum
  }

  class SocialOrderItem {
    +id: bigint
    +order_id: bigint
    +product_id: bigint
    +quantity: int
  }

  class SocialBeneficiary {
    +id: bigint
    +name: string
    +status: enum
  }

  class SocialAssignment {
    +id: bigint
    +beneficiary_id: bigint
    +donation_id: bigint?
    +order_id: bigint?
    +status: enum
  }

  class MarketplaceItem {
    +id: bigint
    +seller_user_id: bigint
    +title: string
    +price: decimal
    +status: enum
  }

  class MarketplaceOrder {
    +id: bigint
    +buyer_user_id: bigint
    +status: enum
  }

  class MarketplaceOrderItem {
    +id: bigint
    +order_id: bigint
    +item_id: bigint
    +quantity: int
  }

  class MarketplaceReport {
    +id: bigint
    +item_id: bigint
    +reporter_user_id: bigint
    +reason: string
    +status: enum
  }

  User "1" --> "0..1" Organization : organization
  User "1" --> "0..1" Beneficiary : beneficiary
  User "1" --> "0..1" Profile : profile
  User "1" --> "0..1" CourierProfile : courierProfile

  Organization "1" --> "0..*" Need : needs
  Beneficiary "1" --> "0..*" Need : needs
  User "1" --> "0..*" Need : createdNeeds
  Need "1" --> "0..*" NeedUpdate : updates
  User "1" --> "0..*" NeedUpdate : author

  User "1" --> "0..1" DonationCart : donationCart
  DonationCart "1" --> "0..*" DonationCartItem : items
  Need "1" --> "0..*" DonationCartItem : cartItems
  User "1" --> "0..*" DonationOrder : donationOrders
  DonationCart "1" --> "0..*" DonationOrder : orders
  DonationOrder "1" --> "0..*" Donation : donations
  User "1" --> "0..*" Donation : donations
  Need "1" --> "0..*" Donation : donations
  DonationOrder "1" --> "0..1" PaymentTransaction : transaction
  PaymentTransaction "1" --> "0..*" PaymentAuditLog : auditLogs
  DonationOrder "1" --> "0..*" PaymentAuditLog : paymentAuditLogs

  User "1" --> "0..*" Notification : notifications

  Need "1" --> "0..*" DeliveryMission : deliveryMissions
  DonationOrder "1" --> "0..*" DeliveryMission : deliveryMissions
  User "1" --> "0..*" DeliveryMission : courier
  User "1" --> "0..*" DeliveryMission : missionCreator
  DeliveryMission "1" --> "0..*" DeliveryEvent : events
  DeliveryMission "1" --> "0..*" DeliveryProof : proofs
  User "1" --> "0..*" DeliveryEvent : deliveryActions
  User "1" --> "0..*" DeliveryRequest : deliveryRequests
  User "1" --> "0..*" DeliveryRequest : acceptedDeliveryRequests
  Need "1" --> "0..*" DeliveryRequest : deliveryRequests
  DonationOrder "1" --> "0..*" DeliveryRequest : deliveryRequests
  DeliveryRequest "1" --> "0..*" DeliveryOffer : offers
  User "1" --> "0..*" DeliveryOffer : deliveryOffers

  User "1" --> "0..*" SocialDonation : socialDonations
  User "1" --> "0..*" SocialOrder : socialOrders
  SocialOrder "1" --> "0..*" SocialOrderItem : items
  SocialProduct "1" --> "0..*" SocialOrderItem : orderItems
  SocialBeneficiary "1" --> "0..*" SocialAssignment : assignments
  SocialDonation "1" --> "0..*" SocialAssignment : assignments
  SocialOrder "1" --> "0..*" SocialAssignment : assignments

  User "1" --> "0..*" MarketplaceItem : marketplaceItems
  User "1" --> "0..*" MarketplaceOrder : marketplaceOrders
  MarketplaceOrder "1" --> "0..*" MarketplaceOrderItem : items
  MarketplaceItem "1" --> "0..*" MarketplaceOrderItem : orderItems
  MarketplaceItem "1" --> "0..*" MarketplaceReport : reports
  User "1" --> "0..*" MarketplaceReport : marketplaceReports
